--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,39 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <context-param>
+		<param-name>OracleDriver</param-name>
+		<param-value>oracle.jdbc.OracleDriver</param-value>
+	</context-param>
+	<context-param>
+		<param-name>OracleURL</param-name>
+		<param-value>jdbc:oracle:thin:@localhost:1521:xe</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>OracleId</param-name>
+		<param-value>webproject_db</param-value><!-- 새계정아이디-->
+	</context-param>
+	<context-param>
+		<param-name>OraclePwd</param-name><!--계정비번-->
+		<param-value>1234</param-value>	
+	</context-param>
+	
+  <servlet>
+<servlet-name>MVCBoardWrite</servlet-name>
+<servlet-class>model2.mvcboard.WriteController</servlet-class>
+
+<!-- 첨부파일에 대한 용량설정  @어노테이션 방법도 존재-->
+<multipart-config>
+<max-file-size>1048576</max-file-size>
+<max-request-size>10485760</max-request-size></multipart-config>
+</servlet>
+  
+  
+  
+  
+  
+  
+  
 </web-app>
